# rico-cluster-qt

./: .gitignore  .gitlab-ci.yml  BUILD.md  CHANGELOG.md  CMakeLists.txt  FORMATTING  KNOWN_BUGS.md  LICENSE  NEXT_FEATURES.md  README.md  edge.cpp  edge.h  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h  inputdialog.cpp  inputdialog.h  json_test.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h
icon/: build_icon_from_highres.sh  rico.icns  rico_icon.afdesign
resources/: render_with_graphviz.sh  rico-cluster-qt-save.dot  rico-cluster-qt-save.json
